feat: Create Model Image

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,8 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
+# FILESYSTEM_DISK 預設 local, 上 server 務必要改成 public 
+# FILESYSTEM_DISK 可以是 local、public、s3
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
