--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "spatie/laravel-google-cloud-storage": "^2.2",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
