--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+GOOGLE_CLOUD_PROJECT_ID=GCP_PROJECT_ID
+GOOGLE_CLOUD_STORAGE_BUCKET=CLOUD_STORAGE值區名稱
+
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
